--- a/po/ru.po
+++ b/po/ru.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: trader 7.4-pre1\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2012-03-27 10:37+1100\n"
-"PO-Revision-Date: 2012-03-28 15:59+0200\n"
+"PO-Revision-Date: 2012-03-29 11:20+0200\n"
 "Last-Translator: Pavel Maryanov <acid@jack.kiev.ua>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
 "Language: ru\n"
@@ -1484,7 +1484,7 @@ msgid ""
 "value of cash, stock and debt).  ^HGood luck^N and may the best person win!\n"
 msgstr ""
 "После выбора позиции, вы оказываетесь на  ^BМежзвёздной фондовой бирже^N.  Здесь\n"
-"Вы можете приобретать акции, продавать их, занимать деньги у торгового банка\n"
+"вы можете приобретать акции, продавать их, занимать деньги у торгового банка\n"
 "или погашать  часть своего долга  (если применимо).  Обратите  внимание, что\n"
 "каждая компания выпускает ограниченное количество акций ― нельзя просто бес-\n"
 "конечно покупать!   Однако,  можно предлагать фирме выпустить  больше акций.\n"
@@ -1494,7 +1494,7 @@ msgstr ""
 "раньше, нажав ^K<CTRL><C>^N вместо выбора позиции.  Кроме того, отдельные игроки\n"
 "могут  объявить себя  банкротом  в любой момент.   Если ваш  долг достаточно\n"
 "велик, банк  может сделать  это за вас!   Если не хватает  времени закончить\n"
-"игру, Вы можете сохранить её и продолжить позже.\n"
+"игру, вы можете сохранить её и продолжить позже.\n"
 "\n"
 "^BПобедителем игры^N  является игрок с самой большой  нетто-стоимостью, то есть,\n"
 "разностью между активами (наличные деньги + акции) и долгом.  ^HУдачи вам^N ― да\n"
