Include the Finnish translation by Jorma Karvonen

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ Version 7.4 (not yet released)
 @@@ Revised game algorithms: negative returns now allowed.
 @@@ configure now warns if NcursesW not found.
 @@@ Updated Russian translation; thanks to Vladimir B. Tsarkov and Pavel Maryanov.
+@@@ Finish translation; thanks to Jorma Karvonen.
 @@@ French translation; thanks to Frédéric Marchal.
 @@@ German translation; thanks to Philipp Thomas.
 
